objects/Apttus_Approval__ApprovalRuleAssignee__c.object
<CustomObject>
    <description>Represents a single assignee in an approval rule entry</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeAutoEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if this rule assignee should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
        <inlineHelpText>This field is set to true if this rule assignee should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
        <label>Assignee Auto Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeDescription__c</fullName>
        <description>The assignee description</description>
        <label>Assignee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeEscalateToId__c</fullName>
        <description>The id of the assignee the request will be escalated to if it is escalated at the rule assignee level.</description>
        <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the rule assignee level.</inlineHelpText>
        <label>Assignee Escalate To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeEscalateToName__c</fullName>
        <description>The name of the assignee the request will be escalated to if it is escalated at the rule assignee level.</description>
        <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated at the rule assignee level.</inlineHelpText>
        <label>Assignee Escalate To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeEscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated at the rule assignee level.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated at the rule assignee level.</inlineHelpText>
        <label>Assignee Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected days that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Assignee Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected hours that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Assignee Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeId__c</fullName>
        <description>ID of the assignee. Only applicable for User, Role or Queue. Internally maintained by the application.</description>
        <inlineHelpText>ID of the assignee. Only applicable for User, Role or Queue. Internally maintained by the application.</inlineHelpText>
        <label>Assignee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeLabel__c</fullName>
        <description>The assignee label</description>
        <label>Assignee Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeType__c</fullName>
        <description>The assignee type</description>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Custom User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Custom Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Custom Queue</fullName>
                </value>
                <value>
                    <fullName>Auto Approval</fullName>
                </value>
                <value>
                    <fullName>Approval Matrix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssigneeValue__c</fullName>
        <description>The assignee value</description>
        <label>Assignee Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the request should be auto approved</description>
        <inlineHelpText>Flag to indicate if the request should be auto approved</inlineHelpText>
        <label>Auto Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <description>List of assignee sequences which must be completed before this assignee</description>
        <label>Assignee Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__NotifyOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the assignee receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</description>
        <inlineHelpText>Designates whether the assignee receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</inlineHelpText>
        <label>Notify Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__RuleEntryId__c</fullName>
        <description>ID of the associated rule entry</description>
        <label>Rule Entry</label>
        <referenceTo>Apttus_Approval__ApprovalRuleEntry__c</referenceTo>
        <relationshipLabel>Assignees</relationshipLabel>
        <relationshipName>ApprovalRuleAssignees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether an email notification should be sent to the assignee</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SendReminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <description>The rule assignee sequence</description>
        <label>Assignee Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SkipUnresolvedAssignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</description>
        <inlineHelpText>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</inlineHelpText>
        <label>Skip Unresolved Assignee</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval Rule Assignee</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Assignee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rule Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>